feat: rewrite doc with ui-pro (wip)

--- a/docs/package.json
+++ b/docs/package.json
@@ -7,9 +7,17 @@
     "preview": "nuxi preview"
   },
   "devDependencies": {
-    "@nuxt-themes/docus": "^1.15.0",
-    "@nuxt/content": "2.9.0",
+    "@iconify-json/ph": "^1.1.6",
+    "@iconify-json/simple-icons": "^1.1.77",
+    "nuxt": "npm:nuxt-nightly@latest",
+    "nuxt-og-image": "^2.2.4",
+    "@nuxt/content": "^2.9.0",
+    "@nuxt/image": "1.0.0",
+    "@nuxt/ui-pro": "^0.4.2",
+    "@nuxtjs/fontaine": "^0.4.1",
+    "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/plausible": "^0.2.3",
-    "nuxt": "^3.8.1"
+    "typescript": "^5.3.2",
+    "vue-tsc": "^1.8.22"
   }
 }
