fix(cloudflare): wasm support with dynamic chunks (#1957)

--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
     "dev:start": "node playground/.output/server/index.mjs",
     "lint": "eslint --cache --ext .ts,.mjs,.cjs . && prettier -c src test",
     "lint:fix": "eslint --cache --fix --ext .ts,.mjs,.cjs . && prettier --write -c src test",
-    "nitro": "NODE_OPTIONS=\"--enable-source-maps\" jiti ./src/cli/index.ts",
+    "nitro": "JITI_ESM_RESOLVE=1 NODE_OPTIONS=\"--enable-source-maps\" jiti ./src/cli/index.ts",
     "prepack": "pnpm build",
     "release": "pnpm test && pnpm build && changelogen --release && pnpm publish && git push --follow-tags",
     "stub": "unbuild --stub",
     "test": "pnpm lint && pnpm vitest-es run --silent",
-    "test:fixture:types": "pnpm stub && jiti ./test/scripts/gen-fixture-types.ts && cd test/fixture && tsc --noEmit",
+    "test:fixture:types": "pnpm stub && JITI_ESM_RESOLVE=1 jiti ./test/scripts/gen-fixture-types.ts && cd test/fixture && tsc --noEmit",
     "test:types": "tsc --noEmit && pnpm test:fixture:types",
     "vitest-es": "NODE_OPTIONS=\"--enable-source-maps --experimental-vm-modules\" vitest"
   },
@@ -84,6 +84,7 @@
     "dot-prop": "^8.0.2",
     "esbuild": "^0.19.6",
     "escape-string-regexp": "^5.0.0",
+    "estree-walker": "^3.0.3",
     "etag": "^1.8.1",
     "fs-extra": "^11.1.1",
     "globby": "^14.0.0",
@@ -127,6 +128,7 @@
     "@azure/functions": "^3.5.1",
     "@cloudflare/workers-types": "^4.20231025.0",
     "@types/aws-lambda": "^8.10.126",
+    "@types/estree": "^1.0.5",
     "@types/etag": "^1.8.3",
     "@types/fs-extra": "^11.0.4",
     "@types/node-fetch": "^2.6.9",
