--- a/docs/package.json
+++ b/docs/package.json
@@ -7,17 +7,17 @@
     "preview": "nuxi preview"
   },
   "devDependencies": {
-    "@iconify-json/ph": "^1.1.6",
-    "@iconify-json/simple-icons": "^1.1.77",
-    "nuxt": "npm:nuxt-nightly@latest",
-    "nuxt-og-image": "^2.2.4",
+    "@iconify-json/ph": "^1.1.8",
+    "@iconify-json/simple-icons": "^1.1.82",
     "@nuxt/content": "^2.9.0",
     "@nuxt/image": "1.0.0",
-    "@nuxt/ui-pro": "^0.4.2",
+    "@nuxt/ui-pro": "npm:@nuxt/ui-pro-edge@latest",
     "@nuxtjs/fontaine": "^0.4.1",
-    "@nuxtjs/google-fonts": "^3.0.2",
-    "@nuxtjs/plausible": "^0.2.3",
-    "typescript": "^5.3.2",
-    "vue-tsc": "^1.8.22"
+    "@nuxtjs/google-fonts": "^3.1.1",
+    "@nuxtjs/plausible": "^0.2.4",
+    "nuxt": "npm:nuxt-nightly@latest",
+    "nuxt-og-image": "^2.2.4",
+    "typescript": "^5.3.3",
+    "vue-tsc": "^1.8.25"
   }
 }
