--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
   },
   "resolutions": {
     "nitropack": "link:.",
-    "undici": "^5.28.2"
+    "undici": "^5.28.2",
+    "unenv": "npm:@pi0/unenv@^1.9.0-rc.2"
   },
   "dependencies": {
     "@cloudflare/kv-asset-handler": "^0.3.0",
