--- a/package.json
+++ b/package.json
@@ -120,7 +120,8 @@
     "unctx": "^2.3.1",
     "unenv": "^1.8.0",
     "unimport": "^3.7.0",
-    "unstorage": "^1.10.1"
+    "unstorage": "^1.10.1",
+    "unwasm": "^0.3.1"
   },
   "devDependencies": {
     "@azure/functions": "^3.5.1",
