--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "resolutions": {
     "nitropack": "link:.",
-    "undici": "^5.28.2"
+    "undici": "^6.3.0"
   },
   "dependencies": {
     "@cloudflare/kv-asset-handler": "^0.3.0",
@@ -143,11 +143,11 @@
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.6.0",
     "get-port-please": "^3.1.2",
-    "miniflare": "^2.14.1",
+    "miniflare": "^3.20231218.1",
     "prettier": "^3.1.1",
     "typescript": "^5.3.3",
     "unbuild": "^2.0.0",
-    "undici": "^5.28.2",
+    "undici": "^6.3.0",
     "vitest": "1.1.3",
     "xml2js": "^0.6.2"
   },
