--- a/docs/package.json
+++ b/docs/package.json
@@ -10,6 +10,7 @@
     "@nuxt-themes/docus": "^1.15.0",
     "@nuxt/content": "2.10.0",
     "@nuxtjs/plausible": "^0.2.4",
+    "@nuxtjs/seo": "2.0.0-rc.5",
     "nuxt": "^3.9.1"
   }
 }
