from regex to AST parsing

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@rollup/pluginutils": "^5.1.0",
     "@types/http-proxy": "^1.17.14",
     "@vercel/nft": "^0.26.2",
+    "acorn": "^8.11.3",
     "archiver": "^6.0.1",
     "c12": "^1.6.1",
     "chalk": "^5.3.0",
@@ -83,6 +84,7 @@
     "dot-prop": "^8.0.2",
     "esbuild": "^0.19.11",
     "escape-string-regexp": "^5.0.0",
+    "estree-walker": "^3.0.3",
     "etag": "^1.8.1",
     "fs-extra": "^11.2.0",
     "globby": "^14.0.0",
