--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "jsxFactory": "h",
     "jsxFragmentFactory": "Fragment",
     "paths": {
+      "#internal/storage": ["./src/storage"],
       "nitropack": ["./src/index"],
       "nitropack/config": ["./src/config"],
       "#internal/nitro": ["./src/runtime/index"],
