--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
     "serve-placeholder": "^2.0.1",
     "serve-static": "^1.15.0",
     "std-env": "^3.7.0",
+    "tiny-async-pool": "^2.1.0",
     "ufo": "^1.3.2",
     "uncrypto": "^0.1.3",
     "unctx": "^2.3.1",
@@ -134,6 +135,7 @@
     "@types/node-fetch": "^2.6.11",
     "@types/semver": "^7.5.6",
     "@types/serve-static": "^1.15.5",
+    "@types/tiny-async-pool": "^2.0.3",
     "@vitest/coverage-v8": "1.2.2",
     "changelogen": "^0.5.5",
     "edge-runtime": "^2.5.8",
