--- a/docs/package.json
+++ b/docs/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "dev": "undocs dev",
-    "build": "undocs generate"
+    "build": "undocs build"
   },
   "devDependencies": {
     "undocs": "^0.2.13"
