--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "@types/semver": "^7.5.7",
     "@types/serve-static": "^1.15.5",
     "@vitest/coverage-v8": "1.2.2",
+    "automd": "^0.3.5",
     "changelogen": "^0.5.5",
     "edge-runtime": "^2.5.8",
     "eslint": "^8.56.0",
