feat: experimental websocket support (#2170)

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "citty": "^0.1.6",
     "consola": "^3.2.3",
     "cookie-es": "^1.0.0",
+    "crossws": "^0.2.3",
     "defu": "^6.1.4",
     "destr": "^2.0.3",
     "dot-prop": "^8.0.2",
@@ -87,7 +88,7 @@
     "fs-extra": "^11.2.0",
     "globby": "^14.0.1",
     "gzip-size": "^7.0.0",
-    "h3": "^1.11.0",
+    "h3": "^1.11.1",
     "hookable": "^5.5.3",
     "httpxy": "^0.1.5",
     "is-primitive": "^3.0.1",
@@ -128,6 +129,7 @@
     "@azure/static-web-apps-cli": "^1.1.6",
     "@cloudflare/workers-types": "^4.20240222.0",
     "@types/aws-lambda": "^8.10.134",
+    "@types/bun": "^1.0.7",
     "@types/estree": "^1.0.5",
     "@types/etag": "^1.8.3",
     "@types/fs-extra": "^11.0.4",
