--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "citty": "^0.1.6",
     "consola": "^3.2.3",
     "cookie-es": "^1.0.0",
+    "db0": "^0.1.2",
     "crossws": "^0.2.3",
     "defu": "^6.1.4",
     "destr": "^2.0.3",
@@ -125,6 +126,7 @@
     "unwasm": "^0.3.7"
   },
   "devDependencies": {
+    "better-sqlite3": "^9.4.3",
     "@azure/functions": "^3.5.1",
     "@azure/static-web-apps-cli": "^1.1.6",
     "@cloudflare/workers-types": "^4.20240222.0",
