feat: experimental scheduled tasks

--- a/package.json
+++ b/package.json
@@ -78,8 +78,9 @@
     "citty": "^0.1.6",
     "consola": "^3.2.3",
     "cookie-es": "^1.0.0",
-    "db0": "^0.1.2",
+    "croner": "^8.0.1",
     "crossws": "^0.2.3",
+    "db0": "^0.1.2",
     "defu": "^6.1.4",
     "destr": "^2.0.3",
     "dot-prop": "^8.0.2",
@@ -126,7 +127,6 @@
     "unwasm": "^0.3.7"
   },
   "devDependencies": {
-    "better-sqlite3": "^9.4.3",
     "@azure/functions": "^3.5.1",
     "@azure/static-web-apps-cli": "^1.1.6",
     "@cloudflare/workers-types": "^4.20240222.0",
@@ -140,6 +140,7 @@
     "@types/serve-static": "^1.15.5",
     "@vitest/coverage-v8": "^1.3.1",
     "automd": "^0.3.6",
+    "better-sqlite3": "^9.4.3",
     "changelogen": "^0.5.5",
     "edge-runtime": "^2.5.9",
     "eslint": "^8.57.0",
