chore(examples): update hello-world

--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "example-hello-world",
-  "private": true,
+  "type": "module",
   "scripts": {
+    "build": "nitro build",
     "dev": "nitro dev",
-    "build": "nitro build"
+    "prepare": "nitro prepare",
+    "preview": "node .output/server/index.mjs"
   },
   "devDependencies": {
     "nitropack": "latest"
