fix(pkg): add ioredis as unstorage peer dependency

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "h3": "^1.11.1",
     "hookable": "^5.5.3",
     "httpxy": "^0.1.5",
+    "ioredis": "^5.3.2",
     "is-primitive": "^3.0.1",
     "jiti": "^1.21.0",
     "klona": "^2.0.6",
