--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
       "import": "./dist/cli/index.mjs"
     },
     "./runtime/*": {
-      "types": "./dist/runtime/*.d.mts",
+      "types": "./dist/runtime/*.d.ts",
       "import": "./dist/runtime/*.mjs"
     },
     "./dist/runtime/*": {
-      "types": "./dist/runtime/*.d.mts",
+      "types": "./dist/runtime/*.d.ts",
       "import": "./dist/runtime/*.mjs"
     },
     "./package.json": "./package.json"
