--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
       "types": "./dist/cli/index.d.mts",
       "import": "./dist/cli/index.mjs"
     },
+    "./runtime": {
+      "types": "./dist/runtime/index.d.ts",
+      "import": "./dist/runtime/index.mjs"
+    },
     "./runtime/*": {
       "types": "./dist/runtime/*.d.ts",
       "import": "./dist/runtime/*.mjs"
