--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
   "devDependencies": {
     "@azure/functions": "^3.5.1",
     "@azure/static-web-apps-cli": "^1.1.7",
+    "@scalar/api-reference": "^1.20.7",
     "@cloudflare/workers-types": "^4.20240402.0",
     "@types/aws-lambda": "^8.10.136",
     "@types/bun": "^1.0.12",
