--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "dev": "pnpm nitro dev playground",
     "dev:build": "pnpm nitro build playground",
     "dev:start": "node playground/.output/server/index.mjs",
-    "lint": "eslint --cache --ext .ts,.mjs,.cjs . && prettier -c src test",
-    "lint:fix": "eslint --cache --fix --ext .ts,.mjs,.cjs . && prettier --write -c src test",
+    "lint": "eslint --cache . && prettier -c src test",
+    "lint:fix": "eslint --cache --fix . && prettier --write -c src test",
     "nitro": "JITI_ESM_RESOLVE=1 NODE_OPTIONS=\"--enable-source-maps\" jiti ./src/cli/index.ts",
     "prepack": "pnpm build",
     "release": "pnpm test && pnpm build && changelogen --release && pnpm publish && git push --follow-tags",
@@ -150,8 +150,8 @@
     "better-sqlite3": "^9.5.0",
     "changelogen": "^0.5.5",
     "edge-runtime": "^2.5.9",
-    "eslint": "^8.57.0",
-    "eslint-config-unjs": "^0.2.1",
+    "eslint": "^9.0.0",
+    "eslint-config-unjs": "^0.3.0-rc.5",
     "execa": "^8.0.1",
     "expect-type": "^0.19.0",
     "firebase-admin": "^12.0.0",
