refactor: strict typechecks

--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "@azure/static-web-apps-cli": "^1.1.7",
     "@cloudflare/workers-types": "^4.20240405.0",
     "@scalar/api-reference": "^1.20.29",
+    "@types/archiver": "^6.0.2",
     "@types/aws-lambda": "^8.10.137",
     "@types/bun": "^1.0.12",
     "@types/estree": "^1.0.5",
@@ -146,6 +147,7 @@
     "@types/node-fetch": "^2.6.11",
     "@types/semver": "^7.5.8",
     "@types/serve-static": "^1.15.7",
+    "@types/xml2js": "^0.4.14",
     "@vitest/coverage-v8": "^1.4.0",
     "automd": "^0.3.7",
     "better-sqlite3": "^9.5.0",
