--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "h3": "^1.11.1",
     "hookable": "^5.5.3",
     "httpxy": "^0.1.5",
-    "ioredis": "^5.3.2",
+    "ioredis": "^5.4.0",
     "is-primitive": "^3.0.1",
     "jiti": "^1.21.0",
     "klona": "^2.0.6",
@@ -117,7 +117,7 @@
     "pkg-types": "^1.0.3",
     "pretty-bytes": "^6.1.1",
     "radix3": "^1.1.2",
-    "rollup": "^4.14.1",
+    "rollup": "^4.14.3",
     "rollup-plugin-visualizer": "^5.12.0",
     "scule": "^1.3.0",
     "semver": "^7.6.0",
@@ -137,33 +137,33 @@
     "@azure/functions": "^3.5.1",
     "@azure/static-web-apps-cli": "^1.1.7",
     "@cloudflare/workers-types": "^4.20240405.0",
-    "@scalar/api-reference": "^1.20.29",
+    "@scalar/api-reference": "^1.21.2",
     "@types/aws-lambda": "^8.10.137",
-    "@types/bun": "^1.0.12",
+    "@types/bun": "^1.1.0",
     "@types/estree": "^1.0.5",
     "@types/etag": "^1.8.3",
     "@types/fs-extra": "^11.0.4",
     "@types/node-fetch": "^2.6.11",
     "@types/semver": "^7.5.8",
     "@types/serve-static": "^1.15.7",
-    "@vitest/coverage-v8": "^1.4.0",
+    "@vitest/coverage-v8": "^1.5.0",
     "automd": "^0.3.7",
     "better-sqlite3": "^9.5.0",
     "changelogen": "^0.5.5",
     "edge-runtime": "^2.5.9",
     "eslint": "^9.0.0",
-    "eslint-config-unjs": "^0.3.0-rc.5",
+    "eslint-config-unjs": "0.3.0-rc.6",
     "execa": "^8.0.1",
     "expect-type": "^0.19.0",
-    "firebase-admin": "^12.0.0",
+    "firebase-admin": "^12.1.0",
     "firebase-functions": "^4.9.0",
     "get-port-please": "^3.1.2",
-    "miniflare": "^3.20240404.0",
+    "miniflare": "^3.20240405.1",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.4",
+    "typescript": "^5.4.5",
     "unbuild": "^2.0.0",
-    "undici": "^6.12.0",
-    "vitest": "^1.4.0",
+    "undici": "^6.13.0",
+    "vitest": "^1.5.0",
     "xml2js": "^0.6.2"
   },
   "peerDependencies": {
