--- a/package.json
+++ b/package.json
@@ -137,7 +137,9 @@
     "@azure/functions": "^3.5.1",
     "@azure/static-web-apps-cli": "^1.1.7",
     "@cloudflare/workers-types": "^4.20240405.0",
+    "@deno/types": "^0.0.1",
     "@scalar/api-reference": "^1.21.2",
+    "@types/archiver": "^6.0.2",
     "@types/aws-lambda": "^8.10.137",
     "@types/bun": "^1.1.0",
     "@types/estree": "^1.0.5",
@@ -146,6 +148,7 @@
     "@types/node-fetch": "^2.6.11",
     "@types/semver": "^7.5.8",
     "@types/serve-static": "^1.15.7",
+    "@types/xml2js": "^0.4.14",
     "@vitest/coverage-v8": "^1.5.0",
     "automd": "^0.3.7",
     "better-sqlite3": "^9.5.0",
