--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "dev": "pnpm nitro dev playground",
     "dev:build": "pnpm nitro build playground",
     "dev:start": "node playground/.output/server/index.mjs",
-    "lint": "eslint --cache . && prettier -c src test",
-    "lint:fix": "eslint --cache --fix . && prettier --write -c src test",
+    "lint": "eslint --cache . && biome format .",
+    "lint:fix": "eslint --cache --fix . && biome format . --write",
     "nitro": "JITI_ESM_RESOLVE=1 NODE_OPTIONS=\"--enable-source-maps\" jiti ./src/cli/index.ts",
     "prepack": "pnpm build",
     "release": "pnpm test && pnpm build && changelogen --release && pnpm publish && git push --follow-tags",
@@ -136,6 +136,7 @@
   "devDependencies": {
     "@azure/functions": "^3.5.1",
     "@azure/static-web-apps-cli": "^1.1.7",
+    "@biomejs/biome": "1.7.1",
     "@cloudflare/workers-types": "^4.20240423.0",
     "@deno/types": "^0.0.1",
     "@scalar/api-reference": "^1.22.14",
@@ -152,6 +153,7 @@
     "@vitest/coverage-v8": "^1.5.2",
     "automd": "^0.3.7",
     "better-sqlite3": "^9.6.0",
+    "biome": "^0.3.3",
     "changelogen": "^0.5.5",
     "edge-runtime": "^2.5.9",
     "eslint": "^9.1.1",
