Work in progress

--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "./.nitro/types/tsconfig.json",
   "compilerOptions": {
+    "strict": true,
     "paths": {
       "nitropack": ["../src/index"],
       "nitropack/config": ["../src/config"],
