--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "serve-placeholder": "^2.0.1",
     "serve-static": "^1.15.0",
     "std-env": "^3.7.0",
+    "tiny-async-pool": "^2.1.0",
     "ufo": "^1.5.3",
     "uncrypto": "^0.1.3",
     "unctx": "^2.3.1",
@@ -158,6 +159,7 @@
     "@types/node-fetch": "^2.6.11",
     "@types/semver": "^7.5.8",
     "@types/serve-static": "^1.15.7",
+    "@types/tiny-async-pool": "^2.0.3",
     "@types/xml2js": "^0.4.14",
     "@vitest/coverage-v8": "^1.6.0",
     "automd": "^0.3.7",
