build: load presets from unbundled `nitropack/presets`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "jsx": "preserve",
     "jsxFactory": "h",
     "jsxFragmentFactory": "Fragment",
+    "noEmit": true,
     "paths": {
       "nitropack": ["./src/index"],
       "nitropack/config": ["./src/config"],
