include runtime-meta in bundle

--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "nitro": "./dist/cli/index.mjs",
     "nitropack": "./dist/cli/index.mjs"
   },
-  "files": ["dist", "*.d.ts", "meta.*"],
+  "files": ["dist", "*.d.ts", "runtime-meta.*"],
   "scripts": {
     "build": "pnpm gen-presets && unbuild",
     "dev": "pnpm nitro dev playground",
