--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "type": "module",
   "exports": {
     "./cli": {
-      "types": "./dist/cli/index.d.ts",
+      "types": "./cli.d.ts",
       "import": "./dist/cli/index.mjs"
     },
     "./config": {
-      "types": "./dist/config/index.d.ts",
+      "types": "./config.d.ts",
       "import": "./dist/config/index.mjs"
     },
     ".": {
@@ -23,11 +23,11 @@
       "import": "./dist/core/index.mjs"
     },
     "./kit": {
-      "types": "./dist/kit/index.d.ts",
+      "types": "./kit.d.ts",
       "import": "./dist/kit/index.mjs"
     },
     "./presets": {
-      "types": "./dist/presets/index.d.ts",
+      "types": "./presets.d.ts",
       "import": "./dist/presets/index.mjs"
     },
     "./presets/*": {
@@ -35,11 +35,11 @@
       "import": "./dist/presets/*.mjs"
     },
     "./rollup": {
-      "types": "./dist/rollup/index.d.ts",
+      "types": "./rollup.d.ts",
       "import": "./dist/rollup/index.mjs"
     },
     "./runtime": {
-      "types": "./dist/runtime/index.d.ts",
+      "types": "./runtime.d.ts",
       "import": "./dist/runtime/index.mjs"
     },
     "./runtime/meta": {
@@ -55,7 +55,7 @@
       "import": "./dist/runtime/*.mjs"
     },
     "./types": {
-      "types": "./dist/types/index.d.ts",
+      "types": "./types.d.ts",
       "import": "./dist/types/index.mjs"
     },
     "./package.json": "./package.json"
