refactor: get rid of `#internal/nitro` + backward compat

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,8 +37,11 @@
       "nitropack/types": ["./src/types"],
       // package.json
       "nitropack/package.json": ["./package.json"],
-      // #internal/nitro/virtual
-      "#internal/nitro/virtual/*": ["./src/runtime/virtual/*"]
+      // Virtual files
+      "#nitro-internal-virtual/*": ["./src/types/virtual/*"],
+      // Compatibility (#internal/nitro)
+      "#internal/nitro": ["./src/runtime/_compat"],
+      "#internal/nitro/*": ["./src/runtime/_compat/*"]
     }
   },
   "include": ["src", "test"],
