--- a/package.json
+++ b/package.json
@@ -162,8 +162,8 @@
   "devDependencies": {
     "@azure/functions": "^3.5.1",
     "@azure/static-web-apps-cli": "^1.1.8",
-    "@biomejs/biome": "1.7.3",
-    "@cloudflare/workers-types": "^4.20240529.0",
+    "@biomejs/biome": "^1.8.0",
+    "@cloudflare/workers-types": "^4.20240603.0",
     "@deno/types": "^0.0.1",
     "@scalar/api-reference": "^1.23.5",
     "@types/archiver": "^6.0.2",
@@ -188,7 +188,7 @@
     "firebase-admin": "^12.1.1",
     "firebase-functions": "^4.9.0",
     "get-port-please": "^3.1.2",
-    "miniflare": "^3.20240524.1",
+    "miniflare": "^3.20240524.2",
     "prettier": "^3.3.0",
     "typescript": "^5.4.5",
     "unbuild": "^2.0.0",
