--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.7.1/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.8.0/schema.json",
   "formatter": {
     "indentStyle": "space",
     "ignore": ["**/*.gen.ts"]
@@ -12,7 +12,7 @@
   },
   "javascript": {
     "formatter": {
-      "trailingComma": "es5",
+      "trailingCommas": "es5",
       "arrowParentheses": "always"
     }
   },
