build: introduce `nitropack/meta`
importing json modules is still not mature across ecosystem

--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
       "types": "./kit.d.ts",
       "import": "./dist/kit/index.mjs"
     },
+    "./meta": {
+      "types": "./dist/meta/index.d.ts",
+      "import": "./dist/meta/index.mjs"
+    },
     "./presets": {
       "types": "./presets.d.ts",
       "import": "./dist/presets/index.mjs"
