--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,26 +16,42 @@
     "noEmit": true,
     "paths": {
       // CLI
+      "nitro/cli": ["./src/cli"],
       "nitropack/cli": ["./src/cli"],
       // Config
+      "nitro/config": ["./src/config"],
       "nitropack/config": ["./src/config"],
       // Core
-      "nitropack": ["./src/core"],
+      "nitro/core": ["./src/core"],
       "nitropack/core": ["./src/core"],
+      // Core (alias)
+      "nitro": ["./src/core"],
+      "nitropack": ["./src/core"],
       // Runtime
+      "nitro/runtime": ["./src/runtime"],
       "nitropack/runtime": ["./src/runtime"],
-      "nitropack/runtime/meta": ["./runtime-meta"],
+      // Runtime subpaths
+      "nitro/runtime/*": ["./src/runtime/*"],
       "nitropack/runtime/*": ["./src/runtime/*"],
+      // Runtime meta
+      "nitro/runtime/meta": ["./runtime-meta"],
+      "nitropack/runtime/meta": ["./runtime-meta"],
       // Kit
+      "nitro/kit": ["./src/kit"],
       "nitropack/kit": ["./src/kit"],
       // Meta
+      "nitro/meta": ["./src/meta"],
       "nitropack/meta": ["./src/meta"],
       // Presets
+      "nitro/presets": ["./src/presets"],
       "nitropack/presets": ["./src/presets"],
+      "nitro/presets/*": ["./src/presets/*"],
       "nitropack/presets/*": ["./src/presets/*"],
       // Rollup
+      "nitro/rollup": ["./src/rollup"],
       "nitropack/rollup": ["./src/rollup"],
       // Types
+      "nitro/types": ["./src/types"],
       "nitropack/types": ["./src/types"],
       // Virtual files
       "#nitro-internal-virtual/*": ["./src/types/virtual/*"],
@@ -44,6 +60,6 @@
       "#internal/nitro/*": ["./src/runtime/_compat/*"]
     }
   },
-  "include": ["src", "test"],
+  "include": ["src", "test", "scripts/gen-mirror.ts"],
   "exclude": ["dist", "examples", "playground", "test/fixture"]
 }
