--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,8 +40,8 @@
       // Virtual files
       "#nitro-internal-virtual/*": ["./src/types/virtual/*"],
       // Compatibility (#internal/nitro)
-      "#internal/nitro": ["./src/runtime/_compat"],
-      "#internal/nitro/*": ["./src/runtime/_compat/*"]
+      "#internal/nitro": ["./src/runtime"],
+      "#internal/nitro/*": ["./src/runtime/*"]
     }
   },
   "include": ["src", "test"],
