--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "chalk": "^5.3.0",
     "chokidar": "^3.6.0",
     "citty": "^0.1.6",
+    "compatx": "^0.1.3",
     "confbox": "^0.1.7",
     "consola": "^3.2.3",
     "cookie-es": "^1.1.0",
