--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,11 +56,11 @@ jobs:
           NODE_OPTIONS: --experimental-vm-modules --enable-source-maps
       # - uses: codecov/codecov-action@v3
       - name: Release Nightly
-        if: |
-          github.event_name == 'push' &&
-          !contains(github.event.head_commit.message, '[skip-release]') &&
-          !startsWith(github.event.head_commit.message, 'chore') &&
-          !startsWith(github.event.head_commit.message, 'docs')
+        # if: |
+        #   github.event_name == 'push' &&
+        #   !contains(github.event.head_commit.message, '[skip-release]') &&
+        #   !startsWith(github.event.head_commit.message, 'chore') &&
+        #   !startsWith(github.event.head_commit.message, 'docs')
         run: ./scripts/release-nightly.sh
         env:
           NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
