chore: update ci node version to 20

--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -16,7 +16,7 @@ jobs:
       - run: corepack enable
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 20
           cache: "pnpm"
       - run: pnpm install
       - run: pnpm stub
@@ -25,4 +25,4 @@ jobs:
         run: npm run lint:fix
       - uses: autofix-ci/action@ea32e3a12414e6d3183163c3424a7d7a8631ad84
         with:
-          commit-message: "chore: apply automated fixes"
+          commit-message: "chore: apply automated updates"
