--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,11 +23,7 @@
     "jsxFactory": "h",
     "jsxFragmentFactory": "Fragment",
     /* If your code runs in the DOM: */
-    "lib": [
-      "es2022",
-      "webworker",
-      "dom.iterable"
-    ],
+    "lib": ["es2022", "webworker", "dom.iterable"],
     "paths": {
       // CLI
       "nitro/cli": ["./src/cli"],
@@ -60,6 +56,6 @@
       "#internal/nitro/*": ["./src/runtime/*"]
     }
   },
-  "include": ["src", "test", "scripts/gen-mirror.ts"],
+  "include": ["src", "test", "scripts/gen-mirror.ts", "src/_declarations.d.ts"],
   "exclude": ["dist", "examples", "playground", "test/fixture"]
 }
