--- a/package.json
+++ b/package.json
@@ -66,20 +66,21 @@
     "dev:start": "node playground/.output/server/index.mjs",
     "lint": "eslint --cache . && biome check .",
     "lint:fix": "eslint --cache --fix . && biome check . --write",
-    "nitro": "JITI_ESM_RESOLVE=1 NODE_OPTIONS=\"--enable-source-maps\" jiti ./src/cli/index.ts",
+    "nitro": "jiti ./src/cli/index.ts",
     "prepack": "pnpm build",
-    "gen-mirror": "JITI_ESM_RESOLVE=1 pnpm jiti scripts/gen-mirror.ts",
-    "gen-presets": "JITI_ESM_RESOLVE=1 pnpm jiti scripts/gen-presets.ts",
+    "gen-mirror": "pnpm jiti scripts/gen-mirror.ts",
+    "gen-presets": "pnpm jiti scripts/gen-presets.ts",
     "release": "pnpm test && pnpm build && changelogen --release && pnpm publish && git push --follow-tags",
     "stub": "unbuild --stub",
     "test": "pnpm lint && pnpm vitest-es run --silent",
-    "test:fixture:types": "pnpm stub && JITI_ESM_RESOLVE=1 jiti ./test/scripts/gen-fixture-types.ts && cd test/fixture && tsc --noEmit",
+    "test:fixture:types": "pnpm stub && jiti ./test/scripts/gen-fixture-types.ts && cd test/fixture && tsc --noEmit",
     "test:types": "tsc --noEmit && pnpm test:fixture:types",
     "vitest-es": "NODE_OPTIONS=\"--enable-source-maps --experimental-vm-modules\" vitest"
   },
   "resolutions": {
     "nitropack": "link:.",
-    "undici": "^6.19.2"
+    "undici": "^6.19.2",
+    "jiti": "2.0.0-beta.3"
   },
   "dependencies": {
     "@cloudflare/kv-asset-handler": "^0.3.3",
@@ -95,7 +96,7 @@
     "@types/http-proxy": "^1.17.14",
     "@vercel/nft": "^0.27.2",
     "archiver": "^7.0.1",
-    "c12": "^1.11.1",
+    "c12": "^2.0.0-beta.1",
     "chalk": "^5.3.0",
     "chokidar": "^3.6.0",
     "citty": "^0.1.6",
@@ -119,7 +120,7 @@
     "hookable": "^5.5.3",
     "httpxy": "^0.1.5",
     "ioredis": "^5.4.1",
-    "jiti": "^1.21.6",
+    "jiti": "^2.0.0-beta.3",
     "klona": "^2.0.6",
     "knitwork": "^1.1.0",
     "listhen": "^1.7.2",
@@ -134,7 +135,7 @@
     "openapi-typescript": "^7.0.0",
     "pathe": "^1.1.2",
     "perfect-debounce": "^1.0.0",
-    "pkg-types": "^1.1.1",
+    "pkg-types": "^1.1.3",
     "pretty-bytes": "^6.1.1",
     "radix3": "^1.1.2",
     "rollup": "^4.18.0",
@@ -185,7 +186,7 @@
     "miniflare": "^3.20240610.1",
     "prettier": "^3.3.2",
     "typescript": "^5.4.5",
-    "unbuild": "3.0.0-rc.2",
+    "unbuild": "3.0.0-rc.5",
     "undici": "^6.19.2",
     "vitest": "^1.6.0",
     "xml2js": "^0.6.2"
@@ -210,9 +211,6 @@
         "react-dom",
         "@algolia/client-search"
       ]
-    },
-    "patchedDependencies": {
-      "unbuild@3.0.0-rc.2": "patches/unbuild@3.0.0-rc.2.patch"
     }
   }
 }
