--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,8 @@
 {
-  "extends": ["github>unjs/renovate-config"]
+  "extends": [
+    "github>unjs/renovate-config"
+  ],
+  "ignoreDeps": [
+    "crossws"
+  ]
 }
