--- a/package.json
+++ b/package.json
@@ -95,8 +95,7 @@
   },
   "resolutions": {
     "nitropack": "link:.",
-    "undici": "^6.19.8",
-    "jiti": "^2.0.0"
+    "undici": "^6.19.8"
   },
   "dependencies": {
     "@cloudflare/kv-asset-handler": "^0.3.4",
@@ -112,14 +111,14 @@
     "@types/http-proxy": "^1.17.15",
     "@vercel/nft": "^0.27.4",
     "archiver": "^7.0.1",
-    "c12": "2.0.0-beta.2",
+    "c12": "2.0.0",
     "chokidar": "^3.6.0",
     "citty": "^0.1.6",
     "compatx": "^0.1.8",
     "confbox": "^0.1.7",
     "consola": "^3.2.3",
     "cookie-es": "^1.2.2",
-    "croner": "^8.1.1",
+    "croner": "^8.1.2",
     "crossws": "^0.2.4",
     "db0": "^0.1.4",
     "defu": "^6.1.4",
@@ -138,7 +137,7 @@
     "jiti": "^2.0.0",
     "klona": "^2.0.6",
     "knitwork": "^1.1.0",
-    "listhen": "^1.7.2",
+    "listhen": "^1.8.0",
     "magic-string": "^0.30.11",
     "magicast": "^0.3.5",
     "mime": "^4.0.4",
@@ -153,7 +152,7 @@
     "pkg-types": "^1.2.0",
     "pretty-bytes": "^6.1.1",
     "radix3": "^1.1.2",
-    "rollup": "^4.22.4",
+    "rollup": "^4.22.5",
     "rollup-plugin-visualizer": "^5.12.0",
     "scule": "^1.3.0",
     "semver": "^7.6.3",
@@ -164,17 +163,17 @@
     "uncrypto": "^0.1.3",
     "unctx": "^2.3.1",
     "unenv": "^1.10.0",
-    "unimport": "^3.12.0",
+    "unimport": "^3.13.1",
     "unstorage": "^1.12.0",
-    "untyped": "^1.4.2",
+    "untyped": "^1.5.0",
     "unwasm": "^0.3.9"
   },
   "devDependencies": {
     "@azure/functions": "^3.5.1",
     "@azure/static-web-apps-cli": "^1.1.10",
-    "@cloudflare/workers-types": "^4.20240919.0",
+    "@cloudflare/workers-types": "^4.20240925.0",
     "@deno/types": "^0.0.1",
-    "@scalar/api-reference": "^1.25.17",
+    "@scalar/api-reference": "^1.25.23",
     "@types/archiver": "^6.0.2",
     "@types/aws-lambda": "^8.10.145",
     "@types/estree": "^1.0.6",
@@ -190,13 +189,13 @@
     "changelogen": "^0.5.7",
     "edge-runtime": "^3.0.3",
     "eslint": "^9.11.1",
-    "eslint-config-unjs": "0.3.2",
+    "eslint-config-unjs": "0.4.1",
     "execa": "^9.4.0",
     "expect-type": "^0.20.0",
     "firebase-admin": "^12.5.0",
     "firebase-functions": "^4.9.0",
     "get-port-please": "^3.1.2",
-    "miniflare": "^3.20240909.5",
+    "miniflare": "^3.20240925.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
     "unbuild": "3.0.0-rc.8",
