feat(ws): upgrade crossws to 0.3.x

--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "consola": "^3.2.3",
     "cookie-es": "^1.2.2",
     "croner": "^8.1.2",
-    "crossws": "^0.2.4",
+    "crossws": ">=0.2.0 <0.4.0",
     "db0": "^0.1.4",
     "defu": "^6.1.4",
     "destr": "^2.0.3",
@@ -130,7 +130,7 @@
     "fs-extra": "^11.2.0",
     "globby": "^14.0.2",
     "gzip-size": "^7.0.0",
-    "h3": "^1.12.0",
+    "h3": "^1.13.0",
     "hookable": "^5.5.3",
     "httpxy": "^0.1.5",
     "ioredis": "^5.4.1",
