--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
     "@types/http-proxy": "^1.17.15",
     "@vercel/nft": "^0.27.4",
     "archiver": "^7.0.1",
-    "c12": "2.0.0",
+    "c12": "2.0.1",
     "chokidar": "^3.6.0",
     "citty": "^0.1.6",
     "compatx": "^0.1.8",
@@ -119,7 +119,7 @@
     "consola": "^3.2.3",
     "cookie-es": "^1.2.2",
     "croner": "^8.1.2",
-    "crossws": ">=0.2.0 <0.4.0",
+    "crossws": "^0.3.1",
     "db0": "^0.1.4",
     "defu": "^6.1.4",
     "destr": "^2.0.3",
@@ -134,7 +134,7 @@
     "hookable": "^5.5.3",
     "httpxy": "^0.1.5",
     "ioredis": "^5.4.1",
-    "jiti": "^2.2.1",
+    "jiti": "^2.3.1",
     "klona": "^2.0.6",
     "knitwork": "^1.1.0",
     "listhen": "^1.9.0",
@@ -165,15 +165,15 @@
     "unenv": "^1.10.0",
     "unimport": "^3.13.1",
     "unstorage": "^1.12.0",
-    "untyped": "^1.5.0",
+    "untyped": "^1.5.1",
     "unwasm": "^0.3.9"
   },
   "devDependencies": {
     "@azure/functions": "^3.5.1",
     "@azure/static-web-apps-cli": "^1.1.10",
-    "@cloudflare/workers-types": "^4.20240925.0",
+    "@cloudflare/workers-types": "^4.20241004.0",
     "@deno/types": "^0.0.1",
-    "@scalar/api-reference": "^1.25.26",
+    "@scalar/api-reference": "^1.25.27",
     "@types/archiver": "^6.0.2",
     "@types/aws-lambda": "^8.10.145",
     "@types/estree": "^1.0.6",
@@ -188,7 +188,7 @@
     "better-sqlite3": "^11.3.0",
     "changelogen": "^0.5.7",
     "edge-runtime": "^3.0.3",
-    "eslint": "^9.11.1",
+    "eslint": "^9.12.0",
     "eslint-config-unjs": "0.4.1",
     "execa": "^9.4.0",
     "expect-type": "^1.0.0",
@@ -198,7 +198,7 @@
     "miniflare": "^3.20240925.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.2",
-    "unbuild": "3.0.0-rc.9",
+    "unbuild": "3.0.0-rc.10",
     "undici": "^6.19.8",
     "vitest": "^2.1.2",
     "xml2js": "^0.6.2"
