--- a/test/fixture/wrangler.toml
+++ b/test/fixture/wrangler.toml
@@ -1,4 +1,3 @@
 name = "nitro-test"
-
-[site]
-bucket = ".output/public"
+compatibility_date = "2024-09-19"
+assets = { directory = "./.output/public/", binding = "ASSETS"}
